--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,18 @@ environment:
 
 dependencies:
   file_picker: ^8.1.7
+  file_selector: ^1.0.3
+  #file_selector_macos: ^0.9.4+2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
   macos_ui: ^2.1.7
-  path: ^1.9.1
-  pdfx: ^2.8.0
+  path: ^1.9.0
+  #pdfx: ^2.8.0
+  pdfrx: ^1.0.101
   shared_preferences: ^2.4.0
+  #syncfusion_flutter_pdfviewer: ^28.1.41
 
 dev_dependencies:
   flutter_test:
