--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,14 @@ environment:
   sdk: ^3.6.1
 
 dependencies:
-  file_picker: ^8.1.7
+  #file_picker: ^8.1.7
   file_selector: ^1.0.3
   #file_selector_macos: ^0.9.4+2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
+  logging: ^1.3.0
   macos_ui: ^2.1.7
   path: ^1.9.0
   #pdfx: ^2.8.0
