--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutter_pdf_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.naieia.flutter_pdf_app
+PRODUCT_BUNDLE_IDENTIFIER = com.naieia.pdfviewer
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
