--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
   logging: ^1.3.0
+  macos_secure_bookmarks: ^0.2.1
   macos_ui: ^2.1.7
   path: ^1.9.0
   #pdfx: ^2.8.0
